<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aries.audiotoolkit.MainActivity">
    <item
        android:id="@+id/action_basic"
        android:orderInCategory="0"
        android:title="@string/action_basic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_audio_pre_research"
        android:orderInCategory="1"
        android:title="@string/action_pre_research"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_audio_acoustic"
        android:orderInCategory="2"
        android:title="@string/action_acoustic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_more"
        android:orderInCategory="3"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>