<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <!-- Audio Corpus container -->
    <LinearLayout
        android:id="@+id/EffectCorpusContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/audioPlayerTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/audioEffect_PlaySet"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/playerFileTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/audioEffect_Corpus" />

        <Spinner
            android:id="@+id/acousticCorpusSpinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:entries="@array/playerFileArray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/UserCorpusContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/EffectCorpusContainer">

        <Button
            android:id="@+id/button_userCorpus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/audioEffect_User_Corpus"/>

        <TextView
            android:id="@+id/UserCorpusTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/audioEffect_User_Corpus_default" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/AcousticMonitorContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/UserCorpusContainer">

        <Button
            android:id="@+id/button_acousticMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/audioEffect_AcousticMonitor"
            android:textSize="24sp" />
    </LinearLayout>

    <!-- AEC test container -->
    <LinearLayout
        android:id="@+id/aecTestContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/AcousticMonitorContainer">

        <Button
            android:id="@+id/button_aecTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/audioEffect_AecTest"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>