<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/AudioBasicFragment">

    <fragment
        android:id="@+id/AudioBasicFragment"
        android:name="com.aries.audiotoolkit.AudioBasicFragment"
        android:label="@string/audio_basic_fragment_label"
        tools:layout="@layout/fragment_audio_basic">

        <action
            android:id="@+id/action_AudioBasicFragment_to_PreResearchFragment"
            app:destination="@id/PreResearchFragment" />
        <action
            android:id="@+id/action_AudioBasicFragment_to_AcousticFragment"
            app:destination="@id/AcousticFragment" />
        <action
            android:id="@+id/action_AudioBasicFragment_to_AudioInfoFragment"
            app:destination="@id/AudioInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/PreResearchFragment"
        android:name="com.aries.audiotoolkit.PreResearchFragment"
        android:label="@string/pre_research_fragment_label"
        tools:layout="@layout/fragment_pre_research">

        <action
            android:id="@+id/action_PreResearchFragment_to_AudioBasicFragment"
            app:destination="@id/AudioBasicFragment" />
        <action
            android:id="@+id/action_PreResearchFragment_to_AcousticFragment"
            app:destination="@id/AcousticFragment" />
        <action
            android:id="@+id/action_PreResearchFragment_to_AudioInfoFragment"
            app:destination="@id/AudioInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/AcousticFragment"
        android:name="com.aries.audiotoolkit.AcousticFragment"
        android:label="@string/acoustic_fragment_label"
        tools:layout="@layout/fragment_acoustic">

        <action
            android:id="@+id/action_AcousticFragment_to_AudioBasicFragment"
            app:destination="@id/AudioBasicFragment" />
        <action
            android:id="@+id/action_AcousticFragment_to_PreResearchFragment"
            app:destination="@id/PreResearchFragment" />
        <action
            android:id="@+id/action_AcousticFragment_to_AudioInfoFragment"
            app:destination="@id/AudioInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/AudioInfoFragment"
        android:name="com.aries.audiotoolkit.AudioInfoFragment"
        android:label="@string/audio_info_fragment_label"
        tools:layout="@layout/fragment_audio_info">

        <action
            android:id="@+id/action_AudioInfoFragment_to_AudioBasicFragment"
            app:destination="@id/AudioBasicFragment" />
        <action
            android:id="@+id/action_AudioInfoFragment_to_PreResearchFragment"
            app:destination="@id/PreResearchFragment" />
        <action
            android:id="@+id/action_AudioInfoFragment_to_AcousticFragment"
            app:destination="@id/AcousticFragment" />
    </fragment>
</navigation>
